--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Main</title>
+  <title>Concatenative Evaluator</title>
   <script src="main.js"></script>
   <link rel=stylesheet href="slider.css">
   <!-- uikit -->
