--- a/concat_eval.html
+++ b/concat_eval.html
@@ -7,16 +7,30 @@
   <link rel=stylesheet href="slider.css">
   <!-- uikit -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit/dist/css/uikit.min.css"/>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/uikit/dist/css/uikit.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/uikit/dist/js/uikit.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uikit/dist/js/uikit-icons.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uikit/dist/js/uikit-icons.min.js">
+  </script>
 </head>
 
 <body>
   <nav class="uk-navbar-container uk-navbar-transparent uk-margin-small-top"
        uk-navbar>
+    <div class="uk-navbar-left uk-margin-left">
+      <ul class="uk-navbar-nav">
+        <li><a href="./">Back</a></li>
+      </ul>
+    </div>
     <div class="uk-navbar-center">
       <h2>Concatenative Calculus Evaluator</h2>
+    </div>
+    <div class="uk-navbar-right uk-margin-right">
+      <ul class="uk-navbar-nav">
+        <li><a target="_blank" rel="noreferrer noopener"
+        href="https://github.com/olus2000/concat-evaluator/blob/main/README.rst"
+        >Readme</a></li>
+      </ul>
     </div>
   </nav>
   <div class="uk-margin-auto uk-margin uk-width-3-4@m uk-width-1-1">
