--- a/concat_eval.html
+++ b/concat_eval.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Concatenative Evaluator</title>
-  <script src="main.js"></script>
+  <script src="main.min.js"></script>
   <link rel=stylesheet href="slider.css">
   <!-- uikit -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
